Fixed bug with text overflow in menu item

--- a/src/styles/components/menu/menu_item.css
+++ b/src/styles/components/menu/menu_item.css
@@ -69,6 +69,13 @@
     margin-left: 55px;
 }
 
+.menu-item-card.ingredients {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+
 .more-button:hover {
     scale: 1.3;
 }
